fix cdil text padding issue

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -7,7 +7,6 @@ lazyload: true
   #jumbotron-cdil {
     background: url('https://www.lib.uidaho.edu/media/digital/large/gayrodeo.jpg') no-repeat center;
     background-size: cover;
-    height: 60vh;
   }
 </style>
 
@@ -20,7 +19,7 @@ lazyload: true
 <div class="pt-3 mt-4">
   <div id="jumbotron-cdil" class="jumbotron jumbotron-fluid d-flex align-items-center mb-0">
     <div class="container-fluid">
-      <div class="row">
+      <div class="row py-4">
         <div class="col-md-6 text-right text-white">
 
         </div>
