added a search across collections modal

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -2,7 +2,7 @@
 layout: home
 lazyload: true
 ---
-
+{% include search-all-collections.html %}
 <style>
   #jumbotron-cdil {
     background: url('https://www.lib.uidaho.edu/media/digital/large/gayrodeo.jpg') no-repeat center;
