--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -40,6 +40,7 @@
                             {% endfor %}
                             <br>
                         <button type="button" class="btn btn-info mt-4 px-3" data-backdrop="false" id="mobile-nav-image" data-toggle="modal" data-target="#collections">Browse All Collections</button>
+                        <button type="button" class="btn btn-pride-gold mt-4 ml-4 px-3" data-backdrop="false" id="search-collections-modal-button" data-toggle="modal" data-target="#search-coll-mod">Search Across All Collections</button>
                     </div>
                 </div>
             </div>
