--- a/_includes/search-all-collections.html
+++ b/_includes/search-all-collections.html
@@ -9,7 +9,7 @@
             <div class="modal-body">
                 <div class="row align-items-center mb-3">
                    
-                    <div class="col-12 my-4 text-center">
+                    <div class="col-12 my-4">
                         <script>
                             function cdm_search_all() {
                                 var query = document.getElementById("cdm-search-all").value;
@@ -25,7 +25,7 @@
                         </div>
                         </form>
                     </div>
-                    <p class="my-2 px-4 text-center"><small>This search box will search all items in our digital collections.</small></p>
+                    <p class="my-2 px-4 text-center col-12"><small>This search box will search all items in our digital collections.</small></p>
                 </div>
 
                
