--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,11 @@
 {% assign filters = site.data.browsebuttons %}
-{% assign page-nav = site.data.pagesnav %}
+{%- assign page-nav = site.data.pagesnav -%}
 <div id="sidebar" class="border-right d-none d-md-block pl-5">
     <h3>{{ page.section }}</h3>
     <hr>
     <nav id="sidenav">
         <ul class="list-unstyled components">
-            {% for sub in page-nav[page.section] %}
+            {%- for sub in page-nav[page.section] -%}
             {% if sub.subpages %}{% assign urls = sub.subpages | map: "url" %}
             <li class="border-bottom py-2 pl-1 pr-4">
                 <a {%if sub.type != "direct-link" %}href="#{{ sub.subsection | slugify }}" data-toggle="collapse" aria-expanded="false" {%else %}href="{{ sub.link | relative_url }}"{%endif%}class="dropdown-toggle" >{{ sub.subsection }}</a>
@@ -21,7 +21,7 @@
             <li class="border-bottom py-2 pl-1 pr-4 {% if sub.link == page.url %} active{% endif %}">
                 <a href="{{ sub.link | relative_url }}">{{ sub.subsection }}</a>
             </li>
-            {% endif %}
+            {%- endif -%}
             {% endfor %}
         </ul>
     </nav>
