--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -67,24 +67,19 @@ a {
     max-height: 40px;
 }
 
-.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
-    color: rgba(255,255,255,.75);
-}
-
-.navbar-dark .navbar-nav .nav-link {
-    color: rgba(255,255,255,.5);
-}
-
-.navbar-default { 
+/* Set nav background color and control transition to transparent */
+.navbar { 
   transition:500ms ease;
   background: #343a40;
 }
 
-.navbar-default.scrolled {
+/* Set nav background color on scroll */
+.navbar.scrolled {
   background:rgba(52, 58, 64, 0.8);
 }
 
-.navbar-default.scrolled .lib-logo-lg {
+/* Remove Idaho logo on scroll */
+.navbar.scrolled .lib-logo-lg {
     display: none;
 }
 
