--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -4,6 +4,7 @@
 <!-- load other js -->
 {% if layout.lazyload == true or page.lazyload == true%}<script src="{{ '/js/lazysizes.min.js' | prepend: site.digital-assets }}" async></script>{% endif %}
 {% if page.layout == "collections" %}{% include js/browse-js.html %}{% include js/navscroll-js.html %}{% endif %}
+{% if page.layout == "datalake" %}{% include js/browse-js.html %}{% include js/navscroll-js.html %}{% endif %}
 {% if page.layout == "subjects" %}{% include js/subjects-js.html %}{% endif %}
 {% if page.layout == "page" %}{% include js/sidebar-js.html %}{% endif %}
 {% if page.layout == "map" %}{% include js/map-js.html %}{% endif %}
