--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -96,3 +96,69 @@
     </div>
 </nav>
 {% endif %}
+
+
+{% if page.url contains "data"%}
+<nav class="navbar navbar-expand-md background-ponderosa-pine categorynav border-top border-light" id="catnav">
+    <div class="m-auto">
+        <button class="navbar-toggler btn-outline-light" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            Search Categories <span class="fa fa-angle-down"></span>
+        </button>
+    </div>
+
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav m-auto">
+            <li class="nav-item dropdown mx-2">
+                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Locations</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    {% for f in filters %}
+                    {%- if f.category == 'Locations' -%}
+                    <a class="dropdown-item" href="{{ f.title | strip | url_param_escape | prepend: '/datalake.html#' | relative_url }}">{{ f.title}}</a>
+                    {% endif %}
+                    {%- endfor -%}
+                </div>
+            </li>
+            <li class="nav-item dropdown mx-2">
+                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Subjects</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    {% for f in filters %}
+                    {%- if f.category == 'Subjects' -%}
+                    <a class="dropdown-item" href="{{ f.title | strip | url_param_escape | prepend: '/datalake.html#' | relative_url }}">{{ f.title}}</a>
+                    {% endif %}
+                    {%- endfor -%}
+                </div>
+            </li>
+            <li class="nav-item dropdown mx-2">
+                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Media Types</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    {% for f in filters %}
+                    {%- if f.category == 'Media Types' -%}
+                    <a class="dropdown-item" href="{{ f.title | strip | url_param_escape | prepend: '/datalake.html#' | relative_url }}">{{ f.title}}</a>
+                    {% endif %}
+                    {%- endfor -%}
+                </div>
+            </li>
+            <li class="nav-item dropdown mx-2">
+                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Idaho Places</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    {% for f in filters %}
+                    {%- if f.category == 'Idaho' -%}
+                    <a class="dropdown-item" href="{{ f.title | strip | url_param_escape | prepend: '/datalake.html#' | relative_url }}">{{ f.title}}</a>
+                    {% endif %}
+                    {%- endfor -%}
+                </div>
+            </li>
+            <li class="nav-item dropdown mx-2">
+                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">University of Idaho</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    {% for f in filters %}
+                    {%- if f.category == 'University of Idaho' -%}
+                    <a class="dropdown-item" href="{{ f.title | strip | url_param_escape | prepend: '/datalake.html#' | relative_url }}">{{ f.title}}</a>
+                    {% endif %}
+                    {%- endfor -%}
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+{% endif %}
