--- a/_includes/js/table-js.html
+++ b/_includes/js/table-js.html
@@ -10,7 +10,7 @@
         "deferRender": true,
         // enable pagination 
         "paging": true,
-        "lengthMenu": [[ 25, 50, 100, -1], [ 25, 50, 100, "All"]],
+        "lengthMenu": [[ -1, 25, 50, 100], [ "All", 25, 50, 100 ]],
         // add download features
         dom: 'B<"row mt-2"<"col-md-6"l><"col-md-6"f>>t<"row"<"col-md-6"i><"col-md-6"p>>', 
         buttons: [ 'excelHtml5', 'csvHtml5' ],
@@ -25,7 +25,7 @@
             { "visible": false,  "targets": [ {{ fcount }} ] }
         ],
         // sort based on the second column
-        order: [[ 1, "asc" ]]
+        order: [[ 0, "asc" ]]
     });
 })();
 </script>
