--- a/_includes/search-all-collections.html
+++ b/_includes/search-all-collections.html
@@ -11,14 +11,14 @@
                    
                     <div class="col-12 my-4">
                         <script>
-                            function cdm_search_all() {
-                                var query = document.getElementById("cdm-search-all").value;
+                            function search_all_cdm_collections() {
+                                var query = document.getElementById("search-all-cdm-collections").value;
                                 window.open("https://digital.lib.uidaho.edu/digital/search/searchterm/" + encodeURIComponent(query) + "/field/all/mode/all/conn/and/order/nosort/ad/asc", "_blank" );
                             }
                         </script>
-                        <form class="form-inline" role="search" id="search" onsubmit="cdm_search_all(); return false;">
+                        <form class="form-inline" role="search" id="search" onsubmit="search_all_cdm_collections(); return false;">
                         <div class="input-group col-12">
-                            <input id="cdm-search-all" type="text" class="form-control" placeholder="Search all collections..." aria-label="Search all collections" aria-describedby="search-all-button">
+                            <input id="search-all-cdm-collections" type="text" class="form-control" placeholder="Search all collections..." aria-label="Search all collections" aria-describedby="search-all-button">
                             <div class="input-group-append">
                             <button class="btn btn-pride-gold" type="submit" id="search-all-button">Go</button>
                             </div>
