--- a/_includes/page-meta.html
+++ b/_includes/page-meta.html
@@ -1,13 +1,25 @@
+<meta name="description" content="{{ site.description | escape }}">
+{% if site.author or site.organization-name %}<meta name="author" content="{% if site.author %}{{ site.author | escape }}; {% endif %}{{ site.organization-name | escape }}" >{% endif %}
 <meta name="keywords" content="{{ site.data.theme.keywords | escape }}" >
-<meta name="description" content="{{ site.data.theme.description | escape }}">
-<meta name="author" content="{{ site.data.theme.author | escape }}" >
+
+<!-- DC meta --> 
+<link rel="schema.DCTERMS" href="http://purl.org/dc/terms/" />
+<meta name="DCTERMS.title" content="{{ page.title | escape }}, {{ site.title | escape }}" xml:lang="en" />
+{% if site.author or site.organization-name %}<meta name="DCTERMS.creator" content="{{ site.author | default: site.organization-name | escape }}" xml:lang="en" />{% endif %}
+{% if site.organization-name %}<meta name="DCTERMS.publisher" content="{{ site.organization-name | escape }}" xml:lang="en" />{% endif %}
+<meta name="DCTERMS.date" content="{{ site.time | date: '%Y' }}" xml:lang="en" />
+<meta name="DCTERMS.description" content="{{ site.description | escape }}" xml:lang="en" />
+
 <!-- Open Graph meta -->
-<meta property="og:title" content="{% if page.title %}{{ page.title | escape }} | {% endif %}{{ site.data.theme.title | escape }}" />
-<meta property="og:description" content="{{ site.data.theme.description | escape }}" />
-<meta property="og:site_name" content="{{ site.data.theme.title | escape }}" />
+<meta property="og:title" content="{% if page.title %}{{ page.title | escape }}, {% endif %}{{ site.title | escape }}" />
+<meta property="og:description" content="{{ site.description | escape }}" />
+<meta property="og:site_name" content="{{ site.title | escape }}" />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="{% if site.data.theme.home-banner-image-number %}{{ site.data.theme.cdm-url }}/digital/iiif/{{ site.data.theme.cdm-collection-id }}/{{ site.data.theme.home-banner-image-number }}/full/max/0/default.jpg{% else %}{{ site.data.theme.home-banner-image-link }}{% endif %}" />
-<meta property="og:image:alt" content="{{ site.data.theme.home-banner-image-title }}" />
+<meta property="og:image" content="{{ site.data.theme.featured_item_src | relative_url }}" />
+<meta property="og:image:alt" content="{{ site.data.featured_item_alt | escape }}" />
 <meta property="og:url" content="{{ page.url | absolute_url }}" />
 <meta property="og:locale" content="en_US" />
-<script type="application/ld+json">{"@context":"http://schema.org","@type":"WebPage","headline":"{% if page.title %}{{ page.title | escape }} | {% endif %}{{ site.data.theme.title | escape }}","author":{"@type":"Person","name":"{{ site.data.theme.author | escape }}"},"publisher":"University of Idaho Library","description":"{{ site.data.theme.description | escape }}","image":"{% if site.data.theme.home-banner-image-number %}{{ site.data.theme.cdm-url }}/digital/iiif/{{ site.data.theme.cdm-collection-id }}/{{ site.data.theme.home-banner-image-number }}/full/max/0/default.jpg{% else %}{{ site.data.theme.home-banner-image-link }}{% endif %}","url":"{{ page.url | absolute_url }}"}</script> 
+<!-- schema.org JSON-LD -->
+<script type="application/ld+json">{"@context":"http://schema.org","@type":"WebPage","headline":"{% if page.title %}{{ page.title | escape }}, {% endif %}{{ site.title | escape }}","publisher": { "@context": "https://schema.org", "@type": "Organization", "name": "{{ site.organization-name }}", "url": "{{ site.organization-link }}", "logo": "{{ site.organization-logo-banner }}" },"description":{{ site.description | jsonify }},"image":"{{ site.data.featured_item_src | relative_url }}","url":"{{ page.url | absolute_url }}"}</script> 
+<!-- breadcrumbs schema -->
+<script type="application/ld+json">{"@context": "http://schema.org", "@type": "BreadcrumbList", "itemListElement": [{ "@type": "ListItem", "position": 1, "item": { "@id": "{{ "/" | absolute_url }}", "name": {{ site.title | jsonify }} } },{ "@type": "ListItem", "position": 2, "item": { "@id": "{{ page.url | absolute_url }}", "name": {{ page.title | jsonify }} } }] }</script>
