tweak home page liinks

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -31,9 +31,8 @@ lazyload: true
               </p>
               <p class="lead text-right">
                 Learn more about CDIL's: <br>
-                <a href="https://cdil.lib.uidaho.edu/#projects" class="btn btn-outline-clearwater-light mx-1 mt-2" target='_blank' rel='noopener'>Projects</a>
-                <a href="https://cdil.lib.uidaho.edu/#people" class="btn btn-outline-clearwater-light mx-1 mt-2" target='_blank' rel='noopener'>Fellows</a>
-                <a href="https://cdil.lib.uidaho.edu/#events" class="btn btn-outline-clearwater-light mx-1 mt-2" target='_blank' rel='noopener'>Workshops</a>
+                <a href="https://cdil.lib.uidaho.edu/projects/" class="btn btn-outline-clearwater-light mx-1 mt-2" target='_blank' rel='noopener'>Projects</a>
+                <a href="https://cdil.lib.uidaho.edu/people/" class="btn btn-outline-clearwater-light mx-1 mt-2" target='_blank' rel='noopener'>Fellows</a>
               </p>
             </div>
           </div>
