--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -32,14 +32,14 @@
             <div class="col-md-10 text-center pb-5">
                 <div class="card mb-5 browse-card">
                     <div class="card-body">
-                        <h5 class="card-title text-light">Search Suggested Topics:</h5>
+                        <h5 class="card-title text-light">Browse Suggested Topics:</h5>
                             {% for b in buttons %}
                             {%- if b.button == 'btn' -%}
                             <a class="btn btn-light my-2 mx-1" href="{{ b.title | strip | url_param_escape | prepend: '/collections.html#' | relative_url }}">{{ b.title }}</a>
                             {% endif %}
                             {%- endfor -%}
                             <br>
-                        <button type="button" class="btn btn-info mt-4 mx-2 px-3" id="mobile-nav-image" data-toggle="modal" data-target="#collections">Browse All Collections</button>
+                        <a class="btn btn-info mt-4 mx-2 px-3" href="{{ '/collections.html' | relative_url }}">Browse All Collections</a>
                         <button type="button" class="btn btn-pride-gold mt-4 mx-2 px-3" id="search-collections-modal-button" data-toggle="modal" data-target="#search-coll-mod">Search Across All Collections</button>
                     </div>
                 </div>
