add all collections to search modal, remove all collections modal fix repeating ids issue

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,8 +18,7 @@ layout: default
 
             <div class="col-6 px-0 d-block d-md-none">
                 <div class="small-page">
-                    <!-- collections modal -->
-                    <button id="mobile-nav-image" class="btn btn-pride-gold d-md-none col-sm-12 px-0 rounded-0" type="button" data-toggle="modal" data-target="#collections">Collections</button>
+                    <a id="mobile-nav-image" class="btn btn-pride-gold d-md-none col-sm-12 px-0 rounded-0" href="{{ '/collections.html' | relative_url }}">Collections</a>
                 </div>
             </div>
 
