--- a/_includes/search-all-collections.html
+++ b/_includes/search-all-collections.html
@@ -3,34 +3,49 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="digital">Search Across All Collections</h5>
+                <h2 class="modal-title h5" id="digital">Search Across All Collections</h2>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
-                <div class="row align-items-center mb-3">
-                   
-                    <div class="col-12 my-4">
-                        <script>
-                            function search_all_cdm_collections() {
-                                var query = document.getElementById("search-all-cdm-collections").value;
-                                window.open("https://digital.lib.uidaho.edu/digital/search/searchterm/" + encodeURIComponent(query) + "/field/all/mode/all/conn/and/order/nosort/ad/asc", "_blank" );
-                            }
-                        </script>
-                        <form class="form-inline" role="search" id="search" onsubmit="search_all_cdm_collections(); return false;">
-                        <div class="input-group col-12">
-                            <input id="search-all-cdm-collections" type="text" class="form-control" placeholder="Search all collections..." aria-label="Search all collections" aria-describedby="search-all-button">
-                            <div class="input-group-append">
-                            <button class="btn btn-pride-gold" type="submit" id="search-all-button">Go</button>
-                            </div>
-                        </div>
-                        </form>
-                    </div>
-                    <p class="my-2 px-4 text-center col-12"><small>This search box will search all items in our digital collections.</small></p>
-                </div>
 
+                <div class="mt-4">
+                    <script>
+                        function search_all_cdm_collections() {
+                            var query = document.getElementById("search-all-cdm-collections").value;
+                            window.open("https://digital.lib.uidaho.edu/digital/search/searchterm/" + encodeURIComponent(query) + "/field/all/mode/all/conn/and/order/nosort/ad/asc", "_blank" );
+                        }
+                    </script>
+                    <form class="form-inline" role="search" id="search" onsubmit="search_all_cdm_collections(); return false;">
+                    <div class="input-group w-100">
+                        <input id="search-all-cdm-collections" type="text" class="form-control" placeholder="Search all collections..." aria-label="Search all collections" aria-describedby="search-all-button">
+                        <div class="input-group-append">
+                        <button class="btn btn-pride-gold" type="submit" id="search-all-button">Go</button>
+                        </div>
+                    </div>
+                    </form>
+                </div>
+                <div class="mt-2 mb-4 px-4"><small>This search box will search all items in our digital collections repository. Some content from digital scholarship projects may not be included. All collections can be browsed alphabetically below.</small></div>
+                
+
+                <div class="">
+                    <h3 class="h5">Browse Collection List</h3>
+                    <ul id="allCollections" class="collection-list"></ul>
+                </div>
                
             </div>
         
         </div>
     </div>
 </div>
+
+<script>
+    $.getJSON( "{{ '/data/all-collections.json' | prepend: site.digital-assets }}", function( data ) {
+        var collectionList = "";
+        var items = data.collections;
+        items.forEach(function (item) {
+            collectionList += "<li><a href='" + item[1] + "'>" + item[0] + "</a></li>";
+        });
+        var modalList = document.getElementById("allCollections");
+        modalList.innerHTML = collectionList;
+    });
+</script>
