--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -9,7 +9,19 @@
 {% if page.layout == "page" %}{% include js/sidebar-js.html %}{% endif %}
 {% if page.layout == "map" %}{% include js/map-js.html %}{% endif %}
 {% if page.layout == "table" or page.layout == "data" %}{% include js/table-js.html %}{% endif %}
-{% if page.layout == "home-infographic" %}{% include js/featured-js.html %}{% include js/campus-js.html %}{% include js/banner-js.html %}{% endif %}
+{% if page.layout == "home-infographic" %}{% include js/featured-js.html %}{% include js/campus-js.html %}{% include js/banner-js.html %}
+<script>
+    $.getJSON( "{{ '/data/all-collections.json' | prepend: site.digital-assets }}", function( data ) {
+        var collectionList = "";
+        var items = data.collections;
+        items.forEach(function (item) {
+            collectionList += "<li><a href='" + item[1] + "'>" + item[0] + "</a></li>";
+        });
+        var modalList = document.getElementById("allCollections");
+        modalList.innerHTML = collectionList;
+    });
+</script>
+{% endif %}
 <script defer src="{{ '/fontawesome/js/all.min.js' | prepend: site.digital-assets }}"></script>
 
 <!--Add "scrolled" class to nav element-->
