fix footer link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
                           <a href="https://www.lib.uidaho.edu/about/directions.html">850 S Rayburn Street<br>
                           Moscow, ID 83844</a><br>
                           (208) 885-9444<br>
-                          <a href="{{ '/about/landacknowledgment.html' | relative_url }}"><span class="fas fa-map-marker-alt" aria-hidden="true"></span> On Nimiipuu lands</a>
+                          <a href="https://www.lib.uidaho.edu/about/landacknowledgment.html"><span class="fas fa-map-marker-alt" aria-hidden="true"></span> On Nimiipuu lands</a>
                       </p>
                   </div>
               </div>
