--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
               <div class="row align-items-center">
                   <div class="col-4 text-right">
                       <div class="px-3 py-2 mb-3">
-                          <a title="University of Idaho Library" href="{{ '/' | relative_url }}">
+                          <a title="University of Idaho Library" href="https://www.lib.uidaho.edu/">
                               <img id="footer-logo" class="img-fluid" src="{{ '/images/tower_icon_gold.png' | prepend: site.lib-media }}" alt="Gold U of I Library Tower logo" >
                           </a>
                       </div>
@@ -38,7 +38,7 @@
                   <p>
                     <small><em>Bringing the world to Idaho ... and Idaho to the world.</em><br>
                       <a href="https://www.uidaho.edu/privacy" target="_blank" rel="noopener">U of I Privacy Standard</a> | 
-                      <a href="{{ '/about/tech.html#web-accessibility' | relative_url }}" >Web Accessibility</a>
+                      <a href="https://www.lib.uidaho.edu/digital/about/tech.html#web-accessibility" >Web Accessibility</a>
                       <br>
                       © {{ site.time | date: "%Y" }} University of Idaho Library
                     </small><br>
