--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -52,7 +52,7 @@
 </div>
 
 <div class="alert alert-warning alert-dismissible fade show mb-0 rounded-0" role="alert">
-    <div class="container "><strong>Work in Progress!</strong> Behind the scenes we are migrating our digital repository system to bring better performance and search to our unique collections. Please excuse any disruptions until Jan 2024 as we complete this process!</div>
+    <div class="container "><strong>Digital Collections Work in Progress!</strong> Behind the scenes we are migrating our digital repository system to bring better performance and search to our unique collections. You will be seeing improved collection sites deployed already--however, some links pointing to our old repository platform (containing digital.lib.uidaho.edu) may be broken and centralized search will not available until our migration is complete. <br>Please excuse any disruptions through March 2024 as we complete this process!</div>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
