--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -52,7 +52,10 @@
 </div>
 
 <div class="alert alert-warning alert-dismissible fade show mb-0 rounded-0" role="alert">
-    <div class="container "><strong>Digital Collections Work in Progress!</strong> Behind the scenes we are migrating our digital repository system to bring better performance and search to our unique collections. You will be seeing improved collection sites deployed already--however, some links pointing to our old repository platform (containing digital.lib.uidaho.edu) may be broken and centralized search will not available until our migration is complete. <br>Please excuse any disruptions through March 2024 as we complete this process! <br>If you have broken links to digital.lib.uidaho.edu, visit our <a href="https://www.lib.uidaho.edu/digital/cdm-reference/">CONTENTdm Migration Reference site</a> to find current locations.</div>
+    <div class="container ">
+        <h2>Digital Collections Work in Progress!</h2> 
+        <p>Behind the scenes we are migrating our digital repository system to bring better performance and search to our unique collections. Improved collection sites are already deployed--however, some links pointing to our old repository platform (containing digital.lib.uidaho.edu) may be broken and centralized search will not available until our migration is complete. In the meantime, you can try using our <a class="alert-link" href="{{ '/google.html' | relative_url }}">Google Custom Search</a>.</p>
+        <p>Please excuse any disruptions through March 2024 as we complete this process! <br>If you have broken links to digital.lib.uidaho.edu, visit our <a class="alert-link" href="https://www.lib.uidaho.edu/digital/cdm-reference/">CONTENTdm Migration Reference site</a> to find current locations.</p></div>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
