--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
                   <p>
                     <small><em>Bringing the world to Idaho ... and Idaho to the world.</em><br>
                       <a href="https://www.uidaho.edu/privacy" target="_blank" rel="noopener">U of I Privacy Standard</a> | 
-                      <a href="https://www.lib.uidaho.edu/digital/about/tech.html#web-accessibility" >Web Accessibility</a>
+                      <a href="https://www.lib.uidaho.edu/about/tech.html#web-accessibility" >Web Accessibility</a>
                       <br>
                       © {{ site.time | date: "%Y" }} University of Idaho Library
                     </small><br>
